Removed the word wrapping for now, will fixx later. Added the highlighting to the CSS for a direct link to a div

--- a/ffsportsmensclub_Website/Content/bootstrap.css
+++ b/ffsportsmensclub_Website/Content/bootstrap.css
@@ -21,6 +21,10 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+:target{
+    background-color: #ffa;
+}
+
 article,
 aside,
 details,
